Do not crash if null parent is given to notification wrapper

This can happen at startup. We could use the desktop window then, but I believe
putting a notifier just somewhere is more wrong than right, better skip it then.

BUG: 294884